# vpinball

./: .gitignore  LiveUI.cpp  LiveUI.h  pininput.cpp
build_system/: CMakeLists.txt  smoke.cpp
build_system/cmake/: FFMpeg.cmake  FreeImage.cmake  VPinball.cmake
build_system/dependencies/altsound/: CMakeLists.txt
build_system/dependencies/ffmpeg/: CMakeLists.txt
build_system/dependencies/pinmame/: CMakeLists.txt
editor/: CMakeLists.txt  README.md
editor/src/: CMakeLists.txt  PlogBridge.cpp  PlogBridge.h  README.md  main.cpp
editor/src/adapter/: CMakeLists.txt  Table.cpp  VPinTable.cpp  VPinTable.h  VPinballAdapter.cpp
editor/src/adapter/include/adapter/: Adapter.h  Bumper.h  Point.h  Table.h  TableElement.h  units.h
editor/src/adapter/include/adapter/vpinball/: VPinballAdapter.h
editor/src/editor/: Angle.cpp  Angle.h  CMakeLists.txt  Editor.cpp  Editor.h  PlayfieldElement.cpp  PlayfieldElement.h  TableEdit.cpp  TableEdit.h  settings.h
editor/src/editor/playfield/: Bumper.cpp  Bumper.h  CMakeLists.txt  PlayfieldElement.cpp  PlayfieldElement.h  PlayfieldTheme.cpp  PlayfieldTheme.h
editor/src/editor/playfield/commands/: CMakeLists.txt  SetElementPositionCommand.cpp  SetElementPositionCommand.h
editor/src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  TableTabs.cpp  TableTabs.h  main.cpp
editor/src/gui/blueprint/: TableBlueprint.cpp  TableBlueprint.h
editor/src/gui/dialogs/: CMakeLists.txt  SettingsDialog.cpp  SettingsDialog.h  TableMetaDialog.cpp  TableMetaDialog.h  sizes.cpp  sizes.h
editor/src/gui/playfield/: BumperItem.cpp  BumperItem.h  CMakeLists.txt  DragHandle.cpp  DragHandle.h  ItemFactory.cpp  ItemFactory.h  Playfield.cpp  Playfield.h  PlayfieldGraphicsItem.cpp  PlayfieldGraphicsItem.h  PlayfieldGraphicsObject.cpp  PlayfieldGraphicsObject.h
editor/src/gui/playfield/items/: BumperItem.cpp  BumperItem.h  CMakeLists.txt  DragHandle.cpp  DragHandle.h
editor/src/gui/resources/: README.md
editor/src/gui/widgets/: CMakeLists.txt  PathEdit.cpp  PathEdit.h
editor/src/vpinball/: CMakeLists.txt  CWDGuard.cpp  CWDGuard.h  VPinBumper.cpp  VPinBumper.h  VPinTable.cpp  VPinTable.h  VPinTableElement.cpp  VPinTableElement.h  VPinballAdapter.cpp  units.cpp
src/assets/: Default VPinballX.ini
src/core/: player.cpp  player.h
src/parts/: pintable.cpp
src/physics/: PhysicsEngine.cpp  PhysicsEngine.h
src/physics/nudge/: LegacyNudge.cpp  LegacyNudge.h  NudgeModel.h  TableAccelerationNudge.cpp  TableAccelerationNudge.h
standalone/: README.md
standalone/cmake/: CMakeLists_bgfx-linux-aarch64.txt  CMakeLists_bgfx-linux-x64.txt  CMakeLists_gl-android-arm64-v8a.txt  CMakeLists_gl-ios-arm64.txt  CMakeLists_gl-linux-aarch64.txt  CMakeLists_gl-linux-x64.txt  CMakeLists_gl-macos-arm64.txt  CMakeLists_gl-macos-x64.txt  CMakeLists_gl-rk3588-aarch64.txt  CMakeLists_gl-rpi-aarch64.txt  CMakeLists_gl-tvos-arm64.txt
